# spriteprinter

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
src/: spdata.cpp  spdata.h  spimagearea.cpp  spimagearea.h  spmainwindow.cpp  spmainwindow.h  spriteprinter.cpp
